# Piper-UniversalCICD

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_report.json
src/piper/: cli.py  deps.py  detect.py  report.py
src/piper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
