[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piper"
version = "0.1.0"
description = "Intelligent CI/CD with auto-detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
  "rich>=13.7",
  "pyyaml>=6.0",
  "jinja2>=3.1",
  "pathspec>=0.12",
  "tomli>=2.0; python_version<'3.11'",
  "tomli-w>=1.0"
]

[project.scripts]
piper = "piper.cli:main"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
packages = ["piper"]
files = ["src", "tests"]
exclude = '^(venv|\.venv|build|dist|.*egg-info|\.mypy_cache|\.ruff_cache)/'
strict = true

[[tool.mypy.overrides]]
module = ["rich.*"]
ignore_missing_imports = true

[project.scripts]
piper = "piper.cli:main"